fixing the format of the city avg, as well as the z-index of the shield vs the annotation

--- a/index/style.css
+++ b/index/style.css
@@ -31,7 +31,7 @@ position: fixed;
     height: 100%;
     background-color: rgba(255,255,255,.8);
     position: absolute;
-    z-index: 1;
+    z-index: 199;
 }
 #popup {
 	font-size: 14px;
